# AgentLab

./: .gitignore  AGENDA.md  AGENTS.md  Cargo.toml  MEMORY.md  PLAN.md  README.md  index.json  init_pg.sql  package.json
.agent/: knowledge.md  memory.md
.cargo/: config.toml
apps/agent-lab-desktop/: package.json  pnpm-lock.yaml  vite.config.ts  windi.config.ts
apps/agent-lab-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/agent-lab-desktop/src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  state.rs
apps/agent-lab-desktop/src-tauri/src/commands/: chat.rs  mod.rs  rag.rs  settings.rs
apps/agent-lab-desktop/src-tauri/src/services/: chat.rs  mod.rs  provider_resolver.rs
crates/agent-lab-core/: Cargo.toml
crates/agent-lab-core/examples/: novel_generation.rs  rag_agent.rs
crates/agent-lab-core/src/: db.rs  error.rs  lib.rs  main.rs
crates/agent-lab-core/src/agent/: group_chat.rs  mod.rs  react_agent.rs  reflection_agent.rs  simple_agent.rs  tool_agent.rs
crates/agent-lab-core/src/base/: agent.rs  config.rs  llm.rs  logging.rs  message.rs  mod.rs  provider_config.rs
crates/agent-lab-core/src/services/: chat_dto.rs  chat_service.rs  error.rs  memory_service.rs  message_service.rs  mod.rs  provider_resolver.rs  rag_service.rs  session_service.rs
crates/agent-lab-core/src/storage/: chat_store.rs  error.rs  graph.rs  mod.rs  neo4j.rs  pg.rs
crates/agent-lab-core/src/tools/: memory_tool.rs  mod.rs  rag_tool.rs  time_tool.rs  types.rs
crates/agent-lab-core/src/tools/memory/: base.rs  conflict_resolver.rs  engine.rs  episodic_memory.rs  extractor.rs  fact_extractor.rs  manager.rs  mod.rs  perceptual_memory.rs  semantic_memory.rs  strategy.rs  tool.rs  working_memory.rs
crates/agent-lab-core/src/tools/memory/storage/: pg.rs
crates/agent-lab-core/src/tools/memory/storage/embedder/: ollama_embedder.rs
crates/agent-lab-core/src/tools/memory/strategies/: episodic.rs  mod.rs  perceptual.rs  semantic.rs  working.rs
crates/agent-lab-core/src/tools/rag/: chunking.rs  hyde.rs  index.rs  mod.rs  mqe.rs  query_expansion.rs  retrieval.rs  tool.rs
crates/agent-lab-core/src/tools/shell/: mod.rs
crates/agent-lab-core/src/tools/time/: mod.rs
crates/agent-lab-core/src/tools/web_search/: mod.rs
crates/agent-lab-core/tests/: integration_tests.rs
crates/agent-lab-core/tests/storage/: chat_store_test.rs
crates/agent-lab-core/tests/tools/memory/: episodic_memory_test.rs
crates/agent-lab-core/tests/tools/memory/storage/: neo4j_test.rs
crates/agent-lab-core/tests/tools/rag/: rag_test.rs
docs/: AGENDA.md  MEMORY.md  PLAN.md  ROADMAP.md  architecture.md  context-management-analysis.md  feature-context-window.md  feature-permission-layer.md  feature-tool-call-visibility.md  index.md  openai-response.md
docs/analyses/: context-management-analysis.md  dag-agent-integration-status.md  dag-code-review.md  swarm-architecture-gaps-analysis.md
docs/archive/: MEMORY-history.md
docs/designs/: MULTI_AGENT_ARCHITECTURE.md  agent-capability-roadmap.md  context-window.md  dag-task-orchestration.md  goal-driven-capability.md  multi-agent-swarm-architecture.md  multi-provider-model.md  persistent-memory-vector-db.md  replay-capability.md
docs/goals/: active.json  goal_g436b03607.json  goal_g4fb3137fd.json  goal_g4fcd14981.json  goal_g5360021ef.json  goal_g73b01066a.json  goal_gaps_fix.json  goal_gb5080a8c0.json  goal_gbc6103a30.json  goal_gbcf10dc03.json  goal_gbe3e1535f.json  index.json
docs/openai-response/: 01-overview.md  02-endpoints-messages-state.md  03-functions-structured-streaming.md  (+1 more)
examples/: novel_generation.rs
src/: agent.rs  db.rs  lib.rs  main.rs  main.rs.bak  tool.rs
tests/: integration_tests.rs  line_limit.rs  neo4j_reference_test.rs  swarm_integration.rs
(+263 files in other folders)
