[package]
name = "agent-lab"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = "4.6.1"
dotenvy = "0.15.7"
reqwest = { version = "0.13.4", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
walkdir = "2.5.0"
