[package]
name = "agent-lab"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
bytes = "1.11.1"
clap = "4.6.1"
dotenvy = "0.15.7"
futures-util = "0.3.32"
jsonschema = "0.46.5"
reqwest = { version = "0.13.4", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tokio-stream = "0.1.18"
tracing = "0.1.44"
walkdir = "2.5.0"
